// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageSettings renders correctly with logged in user 1`] = `
<Component
  id="settings"
>
  <h2
    className="headline bold"
  >
    Was soll sich ändern?
  </h2>
  <form
    className="form form-quit"
    onSubmit={[Function]}
  >
    <button
      className="button form-button"
      type="submit"
    >
      Nichts
    </button>
  </form>
  <h2
    className="headline"
  >
    Die Sprache?
  </h2>
  <form
    className="form form-lang"
  >
    <select
      className="select form-select"
      defaultValue="de"
      onChange={[Function]}
    >
      <option
        key="de"
        value="de"
      >
        Deutsch
      </option>
      <option
        key="en"
        value="en"
      >
        Englisch
      </option>
    </select>
  </form>
  <h2
    className="headline"
  >
    Der Ort?
  </h2>
  <form
    className="form form-auth"
    onSubmit={[Function]}
  >
    <button
      className="button form-button"
      type="submit"
    >
      Raus
    </button>
  </form>
</Component>
`;

exports[`PageSettings renders correctly with logged out user 1`] = `
<Component
  id="settings"
>
  <h2
    className="headline bold"
  >
    Was soll sich ändern?
  </h2>
  <form
    className="form form-quit"
    onSubmit={[Function]}
  >
    <button
      className="button form-button"
      type="submit"
    >
      Nichts
    </button>
  </form>
  <h2
    className="headline"
  >
    Die Sprache?
  </h2>
  <form
    className="form form-lang"
  >
    <select
      className="select form-select"
      defaultValue="de"
      onChange={[Function]}
    >
      <option
        key="de"
        value="de"
      >
        Deutsch
      </option>
      <option
        key="en"
        value="en"
      >
        Englisch
      </option>
    </select>
  </form>
  <h2
    className="headline"
  >
    Der Ort?
  </h2>
  <form
    className="form form-auth"
    onSubmit={[Function]}
  >
    <input
      className="input form-input"
      type="password"
    />
    <button
      className="button form-button"
      type="submit"
    >
      Rein
    </button>
  </form>
</Component>
`;
